traefik/base/forward-auth-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: forward-auth
          image: thomseddon/traefik-forward-auth:2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4181
              protocol: TCP
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
