traefik/base/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
spec:
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
  ports:
    - name: traefik
      port: 9000
      protocol: "TCP"
      targetPort: "traefik"
  type: ClusterIP
