traefik/base/forward-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
spec:
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
  ports:
    - name: forward-auth
      port: 4181
      protocol: "TCP"
      targetPort: "forward-auth"
  type: ClusterIP
